// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshot test 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0D0D0D",
      "flex": 1,
      "paddingHorizontal": 8,
      "paddingTop": 130,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 76,
          "fontWeight": "200",
          "width": 108,
        }
      }
    >
      00
      :
    </Text>
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 76,
          "fontWeight": "200",
          "width": 108,
        }
      }
    >
      00
    </Text>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 30,
        "marginTop": 80,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#151515",
          "borderRadius": 40,
          "height": 80,
          "justifyContent": "center",
          "opacity": 1,
          "width": 80,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 38,
              "borderWidth": 2,
              "height": 76,
              "justifyContent": "center",
              "width": 76,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#8B8B90",
              },
            ]
          }
        >
          Reset
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1B361F",
          "borderRadius": 40,
          "height": 80,
          "justifyContent": "center",
          "opacity": 1,
          "width": 80,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 38,
              "borderWidth": 2,
              "height": 76,
              "justifyContent": "center",
              "width": 76,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#50D167",
              },
            ]
          }
        >
          Start
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ButtonsRow snapshot test 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": 30,
      "marginTop": 80,
    }
  }
>
  <Text>
    I'm a child
  </Text>
  <Text>
    I'm another child
  </Text>
</View>
`;

exports[`Lap snapshot test 1`] = `
<View
  style={
    Object {
      "borderColor": "#151515",
      "borderTopWidth": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "width": 27,
          },
          undefined,
          undefined,
        ],
        Object {
          "width": 100,
        },
      ]
    }
  >
    Lap 
    1
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 18,
          "width": 27,
        }
      }
    >
      00
      :
    </Text>
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 18,
          "width": 27,
        }
      }
    >
      00
    </Text>
  </View>
</View>
`;

exports[`LapsTable snapshot test 1`] = `null`;

exports[`RoundButton snapshot test 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 40,
      "height": 80,
      "justifyContent": "center",
      "opacity": 1,
      "width": 80,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 38,
          "borderWidth": 2,
          "height": 76,
          "justifyContent": "center",
          "width": 76,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 18,
          },
          Object {
            "color": "#000000",
          },
        ]
      }
    >
      Start
    </Text>
  </View>
</View>
`;

exports[`Timer renders 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text>
    00
    :
  </Text>
  <Text>
    00
  </Text>
</View>
`;
